--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="cabecalho">
 <img class="logoimg" src="pumacbl.jpeg"> 
 <ul class="listacabecalho">
-    <li class="item">home</li>
+    <li class="item"><a href="index.html">home</a></li>
     <li class="item">musicas</li>
     <li class="item">letras</li>
 </ul>
