--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img class="logoimg" src="pumacbl.jpeg"> 
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
-    <li class="item">musicas</li>
+    <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">musicas</a></li>
     <li class="item">letras</li>
 </ul>
 
