--- a/redes.html
+++ b/redes.html
@@ -10,8 +10,8 @@
   <header class="cabecalho">
 <img class="logoimg" src="pumacbl.jpeg"> 
 <ul class="listacabecalho">
-    <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">youtube</a></li>
-    <li class="item"><a href="redes.html">rede sociais</a></li>
+    <li class="item"><a href="index.html">home</a></li>
+    <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">rede sociais</a></li>
     <li class="item">letras</li>
 </ul>
 
