--- a/redes.html
+++ b/redes.html
@@ -11,8 +11,9 @@
 <img class="logoimg" src="pumacbl.jpeg"> 
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
-    <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">rede sociais</a></li>
-    <li class="item">letras</li>
+    <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">youtube</a></li>
+    <li class="item"><a href="https://www.instagram.com/pumapjl/">instagram</a></li>
+    <li class="item"><a href="https://www.facebook.com/puma.pjl/?locale=pt_BR">facebook</a></li>
 </ul>
 
   </header>
