--- a/redes.html
+++ b/redes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="cabecalho">
-<img class="logoimg" src="pumacbl.jpeg"> 
+<img class="logoimg" src="puma07.jpeg"> 
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
     <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">youtube</a></li>
