--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     
     </p>
   <img src="puma1.jpeg" alt="computador com txto html">
-  <h2>O primeiro single divulgado pela dupla foi a faixa “No Piscar dos Olhos”, lançado nesta sexta-feira (30) e tem participação da rapper Lis Mc. Além de compositora, ela também é poetisa e Mestre de Cerimônias da Roda Cultural da Zona Norte do RJ. Aos 23 anos, a artista da VTZstudio que é natural do Complexo da Penha no Rio de Janeiro, já participou do Brasil Grime Show e fez diversas participações ao lado de nomes como Chris, Vilão, C97 e Fell. Na rua, ela tem o EP “Infernal” lançado em 2019 e também vários hits como “Nike Air“, “Bad Bitch” e “Outro Patamar“.</h2>
+  <p>O primeiro single divulgado pela dupla foi a faixa “No Piscar dos Olhos”, lançado nesta sexta-feira (30) e tem participação da rapper Lis Mc. Além de compositora, ela também é poetisa e Mestre de Cerimônias da Roda Cultural da Zona Norte do RJ. Aos 23 anos, a artista da VTZstudio que é natural do Complexo da Penha no Rio de Janeiro, já participou do Brasil Grime Show e fez diversas participações ao lado de nomes como Chris, Vilão, C97 e Fell. Na rua, ela tem o EP “Infernal” lançado em 2019 e também vários hits como “Nike Air“, “Bad Bitch” e “Outro Patamar“.</p>
   <img src="puma2.jpeg" alt="">
-  <h3>Puma, 21, morador do Morro da Mangueira, faz parte da gravadora Covil da Bruxa, junto com outros artistas como Tárcis, Leall, VND, OG Britto e TOKIODK. Quase todos eles lançaram projetos próprios recentemente que são muito bons. O coletivo é um dos que mais chama atenção e cresce na cena atual, com uma pegada muito diferenciada. As inspirações do MC são os companheiros da Covil, além do clássico grupo Racionais MC’s. “Escuto desde que me entendo por gente, meu pai tem todos os CDs”, explica.
+  <p>Puma, 21, morador do Morro da Mangueira, faz parte da gravadora Covil da Bruxa, junto com outros artistas como Tárcis, Leall, VND, OG Britto e TOKIODK. Quase todos eles lançaram projetos próprios recentemente que são muito bons. O coletivo é um dos que mais chama atenção e cresce na cena atual, com uma pegada muito diferenciada. As inspirações do MC são os companheiros da Covil, além do clássico grupo Racionais MC’s. “Escuto desde que me entendo por gente, meu pai tem todos os CDs”, explica.
     020146
-  </h3>
+  </p>
   <img src="puma3.png" alt="">
-<h4> “A gente tem essa ideia de tentar chamar essas pessoas da época pra somar com a gente, tá ligado? A gente não quer fazer uma cópia, um resgate dos anos 90, mas a gente quer tentar pôr nossa originalidade. A brisa da letra também é tipo mostrar o lance mais cru mesmo, tá ligado? O Puma quis mostrar que o bagulho é mais cru. A ideia é essa, como o rap nacional dos anos 90 mesmo. A ideia é dura mesmo, tá ligado?”, explica SonoTWS.
-</h4>
+<p> “A gente tem essa ideia de tentar chamar essas pessoas da época pra somar com a gente, tá ligado? A gente não quer fazer uma cópia, um resgate dos anos 90, mas a gente quer tentar pôr nossa originalidade. A brisa da letra também é tipo mostrar o lance mais cru mesmo, tá ligado? O Puma quis mostrar que o bagulho é mais cru. A ideia é essa, como o rap nacional dos anos 90 mesmo. A ideia é dura mesmo, tá ligado?”, explica SonoTWS.
+</p>
 
   </body>
 </html>
