--- a/redes.html
+++ b/redes.html
@@ -10,7 +10,7 @@
   <header class="cabecalho">
 <img class="logoimg" src="puma07.jpeg"> 
 <ul class="listacabecalho">
-    <li class="item"><a href="index.html">home</a></li>
+    <li class="home"><a href="index.html">home</a></li>
     <li class="item"><a href="https://www.youtube.com/channel/UCwpudeJUOZYEyYrBrOVwStg">youtube</a></li>
     <li class="item"><a href="https://www.instagram.com/pumapjl/">instagram</a></li>
     <li class="item"><a href="https://www.facebook.com/puma.pjl/?locale=pt_BR">facebook</a></li>
