--- a/letras.html
+++ b/letras.html
@@ -12,7 +12,7 @@
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
     <li class="item"><a href="redes.html">rede sociais</a></li>
-    <li class="item"><a href="">letras</a></li>
+    <li class="item"><a href="letras.html">letras</a></li>
 </ul>
 
   </header>
