--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <img class="logoimg" src="pumacbl.jpeg"> 
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
-    <li class="item"><a href="redes.html">rede sociais</a></li>
     <li class="item"><a href="letras.html">letras</a></li>
+    <li class="item"><a href="></a></li>
+      <li class="item"><a href="></a></li>
+        <li class="item"><a href="></a></li>
 </ul>
 
   </header>
