--- a/letras.html
+++ b/letras.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="cabecalho">
-<img class="logoimg" src="pumacbl.jpeg"> 
+<img class="logoimg" src="pumal.jpeg"> 
 <ul class="listacabecalho">
     <li class="item"><a href="index.html">home</a></li>
     <li class="item"><a href="redes.html">rede sociais</a></li>
